--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashboard",
   "version": "0.0.0",
   "description": "Icinga Dashboard View",
-  "main": "app.js",
+  "main": "dashboard.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run lite",
