--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "url": "https://github.com/wunderlins/dashboard/issues"
   },
   "dependencies": {
-    "angular": "^1.5.8"
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-bootstrap": "^0.12.2",
+    "angular-touch": "^1.5.8"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
