--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-bootstrap": "^0.12.2",
-    "angular-touch": "^1.5.8",
-    "angular-video-background": "^1.0.1"
+    "angular-touch": "^1.5.8"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
